webserver-deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: landing-deployment
  namespace: landing
  labels: 
    tier: front
    app: landing
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: landing 
  template: 
    metadata:
      name: landing-webpage
      labels:
        app: landing
        type: frontend
    spec:
      containers:
      - name: landing-webpage
        image: webserver:latest
        imagePullPolicy: Never
