webserver-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: landing-webpage
  namespace: landing
  labels: 
    app: landing
    type: frontend
spec:
  containers:
    - name: landing-webpage
      image: webserver:latest
      imagePullPolicy: Never
