webserver-root-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: webservice-ingress
  namespace: landing
  labels: 
    app: landing 
    type: frontend
spec:
  ingressClassName: nginx 
  tls: 
  - hosts:
    - gpastor.net
    secretName: gpastor 
  rules: 
  - host: gpastor.net
    http: 
      paths: 
      - path: / 
        pathType: Prefix
        backend: 
          service: 
            name: landing-service 
            port: 
              number: 80
